# AI-Boilerplate

./: .aider-codestral.conf.yml  .aider-glm.conf.yml  .aider-qwen.conf.yml  .aider-qwen3-coder.conf.yml  .aider.conf.yml  .aiderrules  .gitignore  .gitlab-ci.yml  .mcp.json  AGENTS.md  Makefile  README.md  SPECS.md  SPECS.template.md  docker-compose.yml
.continue/: config.json
.continue/prompts/: finish-branch.prompt  new-feature.prompt  plan-feature.prompt  review.prompt  work-next.prompt  write-plan.prompt
.continue/rules/: product.md  project.md
.continuebk/: config.json
.continuebk/prompts/: add-notes.prompt  brainstorm.prompt  debug.prompt  execute-plan.prompt  fill-in.prompt  plan-feature.prompt  spec-workflow.prompt  tdd.prompt  verify.prompt
.continuebk/rules/: product.md  project.md
.github/workflows/: ci.yml  (+1 more)
backend/: .env.example  AGENTS.md  Dockerfile  conftest.py  main.py  pyproject.toml
backend/alembic/: env.py
backend/core/: auth.py  auth_test.py  config.py  database.py  dependencies.py  feature_flags.py  middleware.py
backend/features/health/: health_router.py  health_test.py  manifest.yaml
backend/features/user/: manifest.yaml  user_model.py  user_repository.py  user_router.py  user_schema.py  user_service.py  user_test.py
frontend/: .cspell.json  .gitignore  .stylelintrc.json  AGENTS.md  Dockerfile  angular.json  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.e2e.json  tsconfig.node.json
keycloak/: Dockerfile  init-db.sql  realm-export.json
shared/: manifest.schema.yaml  openapi.yaml
(+76 files in other folders)
