[project]
name = "ai-boilerplate-backend"
version = "0.1.0"
description = "FastAPI backend for AI-optimized boilerplate"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pydantic[email]>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "datamodel-code-generator>=0.26.0",
]

[tool.setuptools]
packages = ["core", "features"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["features"]
python_files = ["*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN"]
ignore = ["ANN101"]  # self annotation
